# synapse-python

./: Dockerfile  LICENSE  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: python-app.yml
examples/: tcp_client.py  tcp_server.py  websocket_client.py  websocket_server.py
features/: common.py  environment.py  ws_event.feature  ws_state.feature
features/steps/: ws_event_steps.py  ws_state_steps.py
synapse/: connector.py  connector_client.py  connector_server.py  event.py  logger.py  state.py
synapse/adapters/: adapter.py  errors.py  ipc_adapter.py  local_adapter.py  tcp_adapter.py  ws_adapter.py
synapse/serializers/: adapter_message_serializer.py  connector_messsage_serializer.py  errors.py
tests/: test_logger.py
tests/adapters/: test_base_adapter.py
tests/serializers/: test_adapter_message_serializer.py  test_connector_message_serializer.py
